
- If you mock or patch an object, the function signatures will be matched. So::

    def foo(a, b=1): ...

    when(main).foo(12)  # will pass
    when(main).foo(c=13)  # will raise immediately

- Mock Dummies are now callable: ``m = mock(); m(1, 2); verify(m).__call__(...)``

- ``Mock()`` is now an implementation detail; it is not exported anymore. Use ``mock()``.




Release 0.7.1 (December 27, 2016)
---------------------------------

- Fix: Allow verifyNoMoreInteractions call for real (stubbed) objects


Release 0.7.0 (July 15, 2016)
-----------------------------

- Added a ton of new argument matchers. Namely::

    'and_', 'or_', 'not_', 'eq', 'neq', 'lt', 'lte', 'gt', 'gte',
    'arg_that', 'matches', 'captor'

- Aliases 'any' matcher to 'any_' because it's a builtin.
- Fixes an issue where mockito could not correctly verify your function invocations, if you grabbed a method from its object and used it ('detached') as a plain function::

    m = mock()
    f = m.foo  # detach
    f(1, 2)    # pass it around and use it like a function
    f(2, 3)
    verify(m).foo(...) # finally verify interactions

Thank you @maximkulkin


Release 0.6.1 (May 20, 2016)
----------------------------

- Added ``thenAnswer(callable)``. The callable will be called to compute the answer the stubbed method will return. For that it will receive the arguments of the caller::

    m = mock()
    when(m).do_times(any(), any()).thenAnswer(lambda one, two: one * two)
    self.assertEquals(20, m.do_times(5, 4))

Thank you @stubbsd

Release 0.6.0 (April 25, 2016)
------------------------------

- Print keyword arguments nicely.
- Be very forgiving about return values and assume None as default. T.i. ``when(Dog).bark('Miau').thenReturn()`` is enough to return None.
- Make keyword argument order unimportant.
- BREAKING CHANGE: Throw early when calling not expected methods in strict mode.

Release 0.5.3 (April 23, 2016)
------------------------------
